[package]
name = "sparkplug_primary_host"
version = "0.1.0"
edition = "2024"
description = "Scaffold for a Rust Sparkplug B Primary Host"
readme = "README.md"
rust-version = "1.93"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "env"] }
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sparkplug-rs = "0.5.1"
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
